--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>pov_review_movie</title>
 </head>
 
-<body>
+<body class="bg-gray-400">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
